# pm25-forecast-openmeteo-aqicn

./: .cache.sqlite  .env.example  .gitignore  README.md  backfill.ipynb  batch_inference.ipynb  feature_pipeline.ipynb  index.html  main.js  main.py  pyproject.toml  styles.css
.github/workflows/: run_pipelines.yml
frontend/: package.json
frontend/src/app/: layout.tsx
models/: predictions.csv
notebooks/: 2_feature_pipeline.ipynb  3_training.ipynb  4_batch_inference.ipynb  5_function_calling.ipynb
utils/: context_engineering.py  llm_chain.py
