[project]
name = "pm25-forecast-openmeteo-aqicn"
version = "0.1.0"
description = "PM2.5 Forecasting"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "hopsworks[python,polars,great-expectations]>=4.1.2",
    "feldera>=0.33.0",
    "huggingface-hub>=0.33.4",
    "ipykernel>=6.29.5",
    "sentence-transformers>=2.6.0",
    "streamlit==1.28.2",
    "email-validator==2.2.0",
    "pydantic-settings>=2.6.1",
    "geopy==2.4.1",
    "openmeteo-requests",
    "requests-cache==1.2.0",
    "retry-requests==2.0.0",
    "xgboost==2.0.3",
    "scikit-learn==1.2.2",
    "plotly",
    "seaborn",
    "nbformat",
    "Faker",
    "matplotlib==3.8.3",
    "openai>=2.8.1",
    "langchain>=1.0.7",
    "langchain-huggingface>=1.0.1",
    "accelerate>=0.26.0",
]

